--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <body>
         <h1>welcomr to kl university</h1>
         <p>vijayawada campus</p>
-        <p>btech</p>
-        <p>computer science and engineering</p>
+        <p>vaddeswaram</p>
+        
     </body>
 </html>
