pushing to subbranch

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <body>
-        <h1>welcomr to kl university</h1>
+        <h1>welcome to kl university</h1>
         <p>vijayawada campus</p>
-        <p>vaddeswaram</p>
-        
+        <p>vaddeswaramgit </p>
+        <h1> kao</h1>
+        <h6> okaasan</h6>
     </body>
 </html>
